Fix bug with too big top margin in footer section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,6 @@ nav > a {
     font-family: NTR, sans-serif;
     font-weight: bolder;
     font-style: italic;
-
     width: 24%;
     height: auto;
     padding: 15px;
@@ -234,6 +233,26 @@ nav > a {
     border-radius: 10px;
 }
 
+/* map */
+
+#wrapper {
+    height: 400px;
+    border-radius: 10px;
+}
+
+#map {
+    height: 100%;
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+}
+
+/* footer */
+
+#margin-top-zero {
+    margin-top: 0;
+}
+
 #address {
     color: orange;
     font-weight: bolder;
@@ -243,19 +262,6 @@ nav > a {
     padding: 2%;
 }
 
-/* map */
-
-#wrapper {
-    height: 400px;
-}
-
-#map {
-    height: 100%;
-    width: 100%;
-    border: none;
-}
-
-/* footer */
 
 #bottom { /* -> tag for nav element */
     padding: 1%;
